[gd_scene load_steps=2 format=3 uid="uid://3bswykf35jb2"]

[ext_resource type="Script" uid="uid://rje81iuq27k4" path="res://windows/eraseTagWindow/EraseTagWindow.gd" id="1_eytuh"]

[node name="EraseTagWindow" type="Window"]
oversampling_override = 1.0
title = "Apagar tag"
initial_position = 1
size = Vector2i(600, 400)
visible = false
exclusive = true
force_native = true
script = ExtResource("1_eytuh")

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
title = "Confirmar"
initial_position = 1
force_native = true
ok_button_text = "Sim"
cancel_button_text = "Cancelar"

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 26
text = "Apagar tag"
fit_content = true
autowrap_mode = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="SearchContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SearchContainer"]
layout_mode = 2

[node name="SearchLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SearchContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Pesquisar"
keep_editing_on_text_submit = true
clear_button_enabled = true

[node name="TagsContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TagsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TagsContainer/MarginContainer"]
layout_mode = 2
follow_focus = true

[node name="TagsFlowContainer" type="FlowContainer" parent="MarginContainer/VBoxContainer/TagsContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 10

[node name="EraseButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_default_cursor_shape = 2
disabled = true
text = "Apagar"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/SearchContainer/HBoxContainer/SearchLineEdit" to="." method="_on_search_line_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/EraseButton" to="." method="_on_erase_button_pressed"]
